--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -18,11 +18,13 @@
     "axios": "^1.8.4",
     "expo": "^52.0.37",
     "expo-av": "^15.0.2",
+    "expo-build-properties": "~0.13.2",
     "expo-dev-client": "~5.0.12",
     "expo-status-bar": "~2.0.1",
     "nativewind": "2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-agora": "^4.5.2",
     "react-native-gesture-handler": "^2.20.2",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
