--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "expo": "^52.0.37",
     "expo-av": "^15.0.2",
     "expo-build-properties": "~0.13.2",
@@ -29,6 +30,7 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
