--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
+    "axios-debug-log": "^1.0.0",
     "date-fns": "^4.1.0",
+    "esm": "^3.2.25",
     "expo": "^52.0.37",
     "expo-av": "^15.0.2",
     "expo-build-properties": "~0.13.2",
@@ -27,6 +29,7 @@
     "react-native": "0.76.7",
     "react-native-agora": "^4.5.2",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/uuid": "^10.0.0",
     "typescript": "^5.3.3"
   },
   "private": true
