--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-build-properties": "~0.13.2",
     "expo-dev-client": "~5.0.12",
     "expo-status-bar": "~2.0.1",
+    "jwt-decode": "^4.0.0",
     "nativewind": "2.0.11",
     "react": "18.3.1",
     "react-native": "0.76.7",
